# render_start

./: .env  build.sh  db.sqlite3  docker-compose.yaml  manage.py  pyproject.toml  render.yaml  requirements.txt
render/templates/render/: index.html
render_start/: asgi.py  settings.py  urls.py  wsgi.py
