[tool.poetry]
name = "render-start"
version = "0.1.0"
description = ""
authors = ["blinkdeploys <blinkdeploys@gmail.com>"]
readme = "README.md"
packages = [{include = "render_start"}]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.2.3"
whitenoise = {extras = ["brotli"], version = "^6.5.0"}
dj-database-url = "^2.0.0"
psycopg2 = "^2.9.3"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
